--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -23,7 +23,7 @@
         tools:theme="@style/Theme.Shelper">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_container"
+            android:id="@+id/ll_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
