--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -2,7 +2,7 @@
   ~ Shelper © 2022 Team Helper. all rights reserved.
   ~ Shelper license is under the MIT.
   ~
-  ~ [activity_contact.xml] created by Ji Sungbin on 22. 2. 1. 오후 5:40
+  ~ [activity_message.xml] created by Ji Sungbin on 22. 2. 1. 오후 8:46
   ~
   ~ Please see: https://github.com/gdsckoreahackathon2022/01_Helper/blob/main/LICENSE.
   -->
