--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -56,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:includeFontPadding="false"
-                        android:text="@string/activity_map_drawer_call"
+                        android:text="@string/activity_map_drawer_message"
                         android:textColor="@color/primaryDark"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,15 +71,15 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_guide"
+            android:id="@+id/rv_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:orientation="vertical"
             android:overScrollMode="never"
-            android:padding="10dp"
+            android:padding="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/layout_contact_item" />
+            tools:listitem="@layout/layout_message_item" />
 
     </LinearLayout>
 
