--- a/app/src/main/res/layout/layout_message_item.xml
+++ b/app/src/main/res/layout/layout_message_item.xml
@@ -14,7 +14,7 @@
     <data>
 
         <variable
-            name="message"
+            name="item"
             type="java.lang.String" />
     </data>
 
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text="@{message}"
+                android:text="@{item}"
                 tools:maxLines="4"
                 tools:text="@tools:sample/lorem/random" />
 
