--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -115,7 +115,7 @@
             tools:theme="@style/Theme.Shelper">
 
             <LinearLayout
-                android:id="@+id/ll_container"
+                android:id="@+id/ll_container_cv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
