--- a/app/src/main/res/layout/layout_contact_item.xml
+++ b/app/src/main/res/layout/layout_contact_item.xml
@@ -14,7 +14,7 @@
     <data>
 
         <variable
-            name="item"
+            name="contact"
             type="team.gdsc.shelper.activity.contact.model.Contact" />
     </data>
 
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:includeFontPadding="false"
-                    android:text="@{item.name}"
+                    android:text="@{contact.name}"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     tools:text="@tools:sample/lorem" />
@@ -66,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:includeFontPadding="false"
-                    android:text="@{item.number}"
+                    android:text="@{contact.number}"
                     android:textColor="@color/black"
                     tools:text="@tools:sample/us_phones" />
 
