--- a/app/src/main/res/layout/layout_guide_item.xml
+++ b/app/src/main/res/layout/layout_guide_item.xml
@@ -14,7 +14,7 @@
     <data>
 
         <variable
-            name="item"
+            name="guide"
             type="team.gdsc.shelper.activity.guide.model.Guide" />
     </data>
 
@@ -43,7 +43,7 @@
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:shapeAppearance="@style/iv_round_corner"
-                app:srcAny="@{item.image}"
+                app:srcAny="@{guide.image}"
                 tools:src="@tools:sample/avatars" />
 
             <TextView
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginVertical="20dp"
-                android:text="@{item.title}"
+                android:text="@{guide.title}"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -62,7 +62,7 @@
                 android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{item.content}"
+                android:text="@{guide.content}"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 tools:text="@tools:sample/lorem/random" />
